# gerrit_changes_dashboard

./: .FEATURES.CLOSED.md  .gitignore  AGENTS.md  BUGS.md  FEATURES.md  README.md  app.py  approvals.schema.json  cache.py  changes.py  config.py  display.py  gerrit.py  gerrit_approvals.py  gerrit_changes_dashboard.py  input_handler.py  justfile  logs.py  mcp_background.py  models.py  pyproject.toml  tech-debt-report.md  timeline.md  utils.py
docs/: gerrit-rest-api-changes.md  gerrit-user-search.md
gcd/cli/: query.py
gcd/core/: cache.py  changes.py  config.py  gerrit.py  logs.py  models.py  plugin_manager.py  ssh.py  utils.py
gcd/core/config/: __init__.py  field.py  parsers.py
gcd/plugins/: audit_plugin.py  ci_errors.py  logger_plugin.py  neo_comment_errors.py
gcd/tui/: app.py  display.py
gcd/tui/input_handler/: context_actions.py  input_engine.py  utils.py
input_handler/: __init__.py  context_actions.py  input_engine.py  utils.py
mcp/: README.md  tools.json
spec/features/010-spinner-countdown/: spec.md
spec/features/015-arrows/: spec.md
spec/features/020-link-in-comments/: spec.md
spec/features/023-action-layer/: plan.md  spec.md
spec/features/024-test-suite/: spec.md  test-cases.md
spec/features/EPIC003-verification-comments/: spec.md  spike.md
spec/features/EPIC003-verification-comments/EPIC003-001-fetch-gerrit-comments/: spec.md  test-cases.md
spec/features/EPIC003-verification-comments/EPIC003-002-pattern-analyzer/: spec.md  test-cases.md
spec/features/EPIC003-verification-comments/EPIC003-003-analyzer-config/: spec.md  test-cases.md
spike/: sources_of_data.md
tests/: conftest.py  helpers.py  test_app_behaviors.py  test_changes_persistence.py  test_comments.py  test_config.py  test_gerrit.py  test_input_handler.py  test_patchset.py  test_selection_and_config.py
(+6 files in other folders)
