[project]
name = "gerrit-approvals-dashboard"
version = "0.1.0"
dependencies = [
    "rich",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (essential)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "RUF"  # Ruff-specific rules
]

[project.optional-dependencies]
mcp = [
    "fastmcp"
]
